--- a/templates/pages/home_page.html
+++ b/templates/pages/home_page.html
@@ -1,5 +1,10 @@
 {% extends "pages/layout.html" %}
 
+{% block scripts %}
+{{super()}}
+<script type="text/javascript" src="{{ url_for('static', filename='js/track_location.js') }}"></script>
+{% endblock %}
+
 {% block content %}
 {{session['player']}}
 <p>Home Page content</p>
