--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2,3 +2,9 @@ body{
 	font-family:Verdana,Arial,Sans-Serif;
 	font-size:14px;
 }
+
+.wrapper{
+	width:300px;
+	display:block;
+	margin:0px auto;
+}
