--- a/templates/pages/game_start.html
+++ b/templates/pages/game_start.html
@@ -9,11 +9,9 @@
 {% endblock %}
 
 {% block content %}
-<form method="post" action="{{ url_for('start_game') }}">
+<form method="post" action="{{ url_for('start_game',key=game.short) }}">
 	<input type="hidden" name="lat" />
 	<input type="hidden" name="lng" />
-	<label for="target">Who do you want to play with?</label>
-	<input id="target" type="text" name="target" />
 	<label for="map_search">Search Map For Location</label>
 	<input id="map_search" type="text" />
 	<div class="map"></div>
