--- a/templates/pages/signup.html
+++ b/templates/pages/signup.html
@@ -4,7 +4,7 @@
 <form action="/start" method="get">
 	<legend>Enter your phone number to start a game</legend>
 	<label for="phone_number">Your Phone Number</label>
-	<input type="text" id="phone_number" name="player_phone" value="" />
+	<input type="text" id="phone_number" name="phone" value="" />
 	<input type="submit" value="Start" />
 </form>
 {% endblock %}
