--- a/templates/pages/games_list.html
+++ b/templates/pages/games_list.html
@@ -6,4 +6,5 @@
 	<li><a href="{{ url_for('.draw_game',key=game.short)}}">{{game.short}}</a></li>
 	{% endfor %}
 	</ul>
+	<a href="{{ url_for('.start_game') }}">New Game</a>
 {% endblock %}
