--- a/templates/pages/layout.html
+++ b/templates/pages/layout.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>{% if title %}{{title}}{% else %}Running Ball{% endif %}</title>
-	<meta name = "viewport" content = "initial-scale = 1.0, user-scalable = no" />
+	<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=no;" />
 	{% block styles %}
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/normalize.css') }}" />
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}" />
