--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2,21 +2,69 @@ body{
 	font-family:Verdana,Arial,Sans-Serif;
 	font-size:14px;
 }
+a,a:visited{
+	color:#00F;
+	text-decoration:underline;
+}
+fieldset{
+	border:0px;
+	padding:0px;
+	margin:4px 0px 7px;
+	display:block;
+	overflow:hidden;
+	position:relative;
+}
+fieldset legend span{
+	position:absolute;
+	left:-10000px;
+}
+form label{
+	display:block;
+	margin:7px 0px 4px;
+	padding:0px;
+}
+form label.radio{
+	position:relative;
+	padding-left:20px;
+}
+form label.radio input{
+	position:absolute;
+	top:3px;
+	left:3px;
+	display:block;
+	width:auto;
+}
 
 .wrapper{
-	width:300px;
+	width:550px;
 	display:block;
 	margin:0px auto;
 }
+@media only screen and (max-device-width: 400px) { 
+	.wrapper{
+		width: 270px;
+	}
+}
 
+.button{
+	display:block;
+	margin:3px auto 7px;
+	width:200px;
+	border:1px #000 solid;
+	background:#dedede;
+	border-radius:4px;
+	font-size:1.1em;
+	font-weight:bold;
+	padding:7px 0px 4px;
+	text-decoration:none;
+}
+.button.hover,button:hover{
+	background:#acacac;
+	text-shadow:-1px 1px 2px #FFF;
+}
 
 .map{
 	display:block;
 	width:100%;
 	height:250px;
-}
-
-
-form label{
-	display:block;
 }
