--- a/templates/pages/game_map.html
+++ b/templates/pages/game_map.html
@@ -1,17 +1,11 @@
-{% extends "pages/game_map.html" %}
+{% extends "pages/home_page.html" %}
 
 {% block scripts %}
 {{super()}}
-<script type="text/javascript">
-$(document).ready(function(){
-	if($(".player:selected").length<1){
-		$(".player").click();
-	}
-	if($("input[name=player_id]").length<2){
-		$("input[name=player_id]").parents(".list").hide();
-	}
-});
-</script>
+<script type="text/javascript"
+      src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAbEb1hpiYk-X8qwAsFGOrsnv04_imHDpw&sensor=true">
+    </script>
+	<script type="text/javascript" src="{{ url_for('.static', filename='js/map.js') }}"></script>
 {% endblock %}
 
 {% block content %}
@@ -22,7 +16,7 @@ $(document).ready(function(){
 		{% if g.player and player.id == g.player.id %}
 		<!-- You can't add yourself -->
 		{% else %}
-		<li><label><input type="radio" class="player" name="player_id" value="{{player.id}}" />{{player.name}} <em>{{player.phone}}</em></label></li>
+		<li><label><input type="radio" name="player_id" value="{{player.id}}" />{{player.name}} <em>{{player.phone}}</em></label></li>
 		{% endif %}
 		{% endfor %}
 	</ul>
@@ -33,6 +27,6 @@ $(document).ready(function(){
 	<input id="map_search" type="text" />
 	-->
 	<div class="map"></div>
-	<input type="submit" class="button" value="Throw Ball" />
+	<input type="submit" value="Send Challenge" />
 </form>
 {% endblock %}
