--- a/templates/pages/challenge_player.html
+++ b/templates/pages/challenge_player.html
@@ -7,11 +7,28 @@ $(document).ready(function(){
 	if($(".player:selected").length<1){
 		$(".player:first").click();
 	}
+	$(".players.list input.player").click(function(){
+		player = $(this);
+		$.ajax({
+			url:'/location/player',
+			type:"post",
+			dataType:"JSON",
+			data:{id:player.val()},
+			success:function(data){
+				$(".map").trigger({
+					type:'add_player',
+					lat:data.lat,
+					lng:data.lng
+				})
+			}
+		})
+	});
 });
 </script>
 {% endblock %}
 
 {% block content %}
+<div class="score">Current Score:<span class="number">{{game.count_score()}}</span> points</div>
 <form method="post" action="{{ url_for('.challenge_player',key=game.short) }}">
 	<legend>Throw a ball</legend>
 	<fieldset>
