--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -94,3 +94,13 @@ form label.radio input{
 	width:100%;
 	height:250px;
 }
+
+
+.flashes li{
+	background:#e9ffa6;
+	color:#000;
+	display:block;
+	text-align:center;
+	padding:3px 5px 5px;
+	margin:5px 0px 3px;
+}
