--- a/templates/pages/home_page.html
+++ b/templates/pages/home_page.html
@@ -12,7 +12,7 @@
 	<legend>Enter your phone number to start a game</legend>
 	<label for="name">Name</label>
 	<input type="text" id="name" name="name" />
-	<label for="phone_number">Mobile Number <span class="required">Required</span></label>
+	<label for="phone_number">Mobile Number</label>
 	<input class="required" type="text" id="phone_number" name="phone" value="" />
 	<input type="submit" value="Get Running" />
 </form>
