--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -69,7 +69,7 @@ form label.radio input{
 	display:block;
 	float:left;
 	margin:3px 10px 7px 0px;
-	width:200px;
+	width:120px;
 	border:1px #000 solid;
 	background:#dedede;
 	border-radius:4px;
@@ -95,6 +95,7 @@ form label.radio input{
 
 .map{
 	display:block;
+	clear:both;
 	width:100%;
 	height:200px;
 }
