--- a/templates/pages/game_challenge.html
+++ b/templates/pages/game_challenge.html
@@ -41,12 +41,10 @@
 <div class="score">Current Score:<span class="number">{{game.count_score()}}</span> points</div>
 <form method="POST" action="{{ url_for('.game_challenge',key=game.short) }}">
 	<legend><h3>Run to catch the ball</h3></legend>
-	<label><input class="challenge" data-lat="{{challenge.lat}}" data-lng="{{challenge.lng}}" type="radio" name="challenge_id" value="{{challenge.id}}" /> The Ball</label>
+	<label style="display:none;"><input class="challenge" data-lat="{{challenge.lat}}" data-lng="{{challenge.lng}}" type="radio" name="challenge_id" value="{{challenge.id}}" /> The Ball</label>
 	<input class="user coords" type="hidden" name="lat" />
 	<input class="user coords" type="hidden" name="lng" />
-	<br style="clear:both;" />
-	<input class="button" type="submit" value="I'm Here" /><a id="cancel_button" href="#" class="button cancel">Really Bad Idea</a>
-	<br style="clear:both;" />
+	<input class="button" type="submit" value="I'm Here" /><a id="cancel_button" href="#" class="button cancel">Bad Idea</a>
 	<div class="map"></div>
 </form>
 <form id="real_cancel" style="display:none;" method="post" action="{{ url_for('.challenge_delete',id=challenge.id) }}">
