--- a/templates/pages/game_view.html
+++ b/templates/pages/game_view.html
@@ -9,6 +9,7 @@
 {% endblock %}
 
 {% block content %}
+<div class="message">When someone assigns you a new goal you will see this.</div>
 <div class="score"><span class="number">{{game.count_score()}}</span> points</div>
 <h3>Players in Game</h3>
 <ul class="players list">
