--- a/templates/pages/layout.html
+++ b/templates/pages/layout.html
@@ -49,7 +49,7 @@
 		<div id="foot">
 			{% block foot %}
 			<div class="byline">
-				<p>Built in less than 48 hours at Global Game Jam 2012 in San Francisco by Nick Reid, Julie Price, and Kevin Tsung.</p>
+				<p>Built in less than 48 hours at Global Game Jam 2012 in San Francisco by Nick Reid, Julie Price, and Kevin Tong.</p>
 			</div>
 			{% endblock %}
 		</div>
