i forgot the commas

--- a/templates/pages/home_page.html
+++ b/templates/pages/home_page.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 <p>Send a ball to your friend, where ever they are.  They will have to run for it to catch it, but be nice because they will be throwing balls for you too.</p>
-<p>Its all through text messaging, so whats your number?</p>
+<p>It's all through text messaging, so what's your number?</p>
 <form action="{{ url_for('.signup') }}" method="POST">
 	<legend>Enter your phone number to start a game</legend>
 	<label for="name">Name</label>
